# releases

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  PROCESS.rst  README.rst  bindep.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  watched_queries.yml  yamllint.yml
data/: release_liaisons.yaml  series_status.yaml
deliverables/: series_status.yaml
deliverables/_independent/: ansible-config_template.yaml  ansible-role-chrony.yaml  ansible-role-collect-logs.yaml  ansible-role-container-registry.yaml  ansible-role-openstack-operations.yaml  ansible-role-redhat-subscription.yaml  ansible-role-tripleo-modify-image.yaml  automaton.yaml  bandit.yaml  bashate.yaml  castellan-ui.yaml  castellan.yaml  cinderlib.yaml  codegenerator.yaml  cursive.yaml  cyborg.yaml  debtcollector.yaml  designate-tempest-plugin.yaml  devstack-tools.yaml  diskimage-builder.yaml  django-openstack-auth-kerberos.yaml  doc8.yaml  dragonflow.yaml  eslint-config-openstack.yaml  etcd3gw.yaml  fairy-slipper.yaml  futurist.yaml  fuxi.yaml  gnocchi.yaml  hacking.yaml  heat-cfntools.yaml  heat-tempest-plugin.yaml  heat-translator.yaml  instack.yaml  ironic-lib.yaml  ironic-python-agent-builder.yaml  ironic-staging-drivers.yaml  ironic-tempest-plugin.yaml  karbor-dashboard.yaml  karbor.yaml  (+194 more)
deliverables/antelope/: adjutant-ui.yaml  adjutant.yaml  ansible-collection-kolla.yaml  ansible-role-atos-hsm.yaml  ansible-role-lunasa-hsm.yaml  ansible-role-thales-hsm.yaml  aodh.yaml  automaton.yaml  barbican-tempest-plugin.yaml  barbican.yaml  bifrost.yaml  blazar-dashboard.yaml  blazar-nova.yaml  blazar-tempest-plugin.yaml  blazar.yaml  castellan.yaml  ceilometer.yaml  ceilometermiddleware.yaml  cinder-tempest-plugin.yaml  cinder.yaml  cinderlib.yaml  cliff.yaml  cloudkitty-dashboard.yaml  cloudkitty-tempest-plugin.yaml  cloudkitty.yaml  compute-hyperv.yaml  cyborg-tempest-plugin.yaml  cyborg.yaml  designate-dashboard.yaml  designate-tempest-plugin.yaml  designate.yaml  devstack-plugin-ceph.yaml  devstack-plugin-container.yaml  devstack.yaml  ec2-api.yaml  ec2api-tempest-plugin.yaml  freezer-tempest-plugin.yaml  freezer-web-ui.yaml  freezer.yaml  glance-store.yaml  (+235 more)
deliverables/austin/: nova.yaml  swift.yaml
deliverables/bexar/: glance.yaml  nova.yaml  swift.yaml
deliverables/bobcat/: adjutant-ui.yaml  adjutant.yaml  ansible-collection-kolla.yaml  ansible-role-atos-hsm.yaml  ansible-role-lunasa-hsm.yaml  ansible-role-thales-hsm.yaml  aodh.yaml  automaton.yaml  barbican-tempest-plugin.yaml  barbican.yaml  bifrost.yaml  blazar-dashboard.yaml  blazar-nova.yaml  blazar-tempest-plugin.yaml  blazar.yaml  castellan.yaml  ceilometer.yaml  ceilometermiddleware.yaml  cinder-tempest-plugin.yaml  cinder.yaml  cinderlib.yaml  cliff.yaml  cloudkitty-dashboard.yaml  cloudkitty-tempest-plugin.yaml  cloudkitty.yaml  compute-hyperv.yaml  cyborg-tempest-plugin.yaml  cyborg.yaml  designate-dashboard.yaml  designate-tempest-plugin.yaml  designate.yaml  devstack-plugin-ceph.yaml  devstack-plugin-container.yaml  devstack.yaml  ec2-api.yaml  (+237 more)
doc/: requirements.txt
openstack_releases/: __init__.py  _redirections.py  defaults.py  deliverable.py  flags.py  gerritutils.py  gitutils.py  governance.py  hound.py  liaisons.py  liaisons_schema.py  liaisons_schema.yaml  links.py  npmutils.py  processutils.py  project_config.py  puppetutils.py  pythonutils.py  release_notes.py  requirements.py  rst2txt.py  schema.py  schema.yaml  series_sorting.py  series_status.py  series_status_schema.yaml  sphinxext.py  versionutils.py  wiki.py  xstaticutils.py  yamlutils.py
templates/: final.txt  rc1.txt  rcn.txt
tools/: abandon_patches_on_branch.sh  abandon_patches_on_unmaintained_branch.sh  aclfixer.py  aclissues.py  aclmanager.py  add_release_note_links.sh  add_reviewers.sh  add_teams_to_deliverable_files.sh  announce.sh  build_reenqueue_commands.sh  build_tag_history.sh  bulk_review.sh  check_approval.py  clone_repo.sh  delete_stable_branch.py  delete_unmaintained_branch.py  discover_branch_points.py  functions  governance_consistency.py  import_branch_points.sh  inactive_project_report.sh  list_changes_unreleased_deliverables.sh  list_client_library_unreleased_changes.sh  list_eol_stale_branches.sh  list_eom_stale_branches.sh  list_library_unreleased_changes.sh  list_rc1.sh  list_rc_updates.sh  list_stable_unreleased_changes.sh  list_unbranched_projects.sh  list_unreleased_and_open_changes.sh  list_unreleased_changes.sh  list_unreleased_changes_for_team.sh  list_weeks.py  make_missing_releases.sh  membership_freeze_test.py  mkteampage.sh  new_release.sh  process_auto_releases.sh  repository_test_generator.sh  (+9 more)
(+5593 files in other folders)
