[metadata]
name = releases
summary = OpenStack Releases
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages = openstack_releases

[entry_points]
console_scripts =
    validate-request = openstack_releases.cmds.validate:main
    list-changes = openstack_releases.cmds.list_changes:main
