[metadata]
name = openstack_releases
summary = OpenStack Releases
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = openstack_releases

[entry_points]
console_scripts =
    validate-request = openstack_releases.cmds.validate:main
    list-changes = openstack_releases.cmds.list_changes:main
    list-constraints = openstack_releases.cmds.list_constraints:main
    new-release = openstack_releases.cmds.new_release:main
    format-yaml = openstack_releases.cmds.reformat_yaml:main
    interactive-release = openstack_releases.cmds.interactive_release:main
    missing-releases = openstack_releases.cmds.missing:main
    check-diff-start = openstack_releases.cmds.check_diff_start:main
    list-deliverables = openstack_releases.cmds.list_deliverables:main
	make-dashboard = openstack_releases.cmds.dashboard:main

[extras]
sphinxext =
    sphinx<1.4
    oslosphinx

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
