[metadata]
name = openstack_releases
summary = OpenStack Releases
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages = openstack_releases

[entry_points]
console_scripts =
    validate-request = openstack_releases.cmds.validate:main
    list-changes = openstack_releases.cmds.list_changes:main
    list-em-series = openstack_releases.cmds.list_series:em
    list-maintained-series = openstack_releases.cmds.list_series:maintained
    list-unreleased-changes = openstack_releases.cmds.list_unreleased_changes:main
    list-constraints = openstack_releases.cmds.list_constraints:main
    new-release = openstack_releases.cmds.new_release:main
    format-yaml = openstack_releases.cmds.reformat_yaml:main
    interactive-release = openstack_releases.cmds.interactive_release:main
    missing-releases = openstack_releases.cmds.missing:main
    check-diff-start = openstack_releases.cmds.check_diff_start:main
    list-deliverables = openstack_releases.cmds.list_deliverables:main
    init-series = openstack_releases.cmds.init_series:main
    get-deliverable-owner = openstack_releases.cmds.get_deliverable_owner:main
    propose-final-releases = openstack_releases.cmds.propose_final_releases:main
    make-tracking-pad = openstack_releases.cmds.make_tracking_pad:main
    propose-library-branches = openstack_releases.cmds.propose_library_branches:main
    edit-deliverable = openstack_releases.cmds.edit_deliverable:main
    send-mail = openstack_releases.cmds.mail:main
    release-notes = openstack_releases.cmds.release_notes:main
    check-schema = openstack_releases.cmds.check_schema:main
    find-gerrit-acl-issues = openstack_releases.cmds.find_gerrit_acl_issues:main
    get-contacts = openstack_releases.cmds.get_contacts:main
    get-versions-on-series = openstack_releases.cmds.get_versions_on_series:main
